--- a/coinbase.html
+++ b/coinbase.html
@@ -342,8 +342,8 @@
 
   <!-- Balance Section -->
   <div class="balance-section">
-    <h2>$25.01</h2>
-    <p><span id="wallet-address">0xA1Ed...3CB4E</span> <span class="coin-default"><span class="coin-defaults">Trump</span></span></p>
+    <h2 style="font-weight:900;">$25.01</h2>
+    <p><span id="wallet-address" style="color:#5a5a5ae9;font-weight:900;">0xA1Ed...3CB4E</span> <span class="coin-default"><span class="coin-defaults">Trump</span></span></p>
   </div>
 
   <!-- Action Buttons -->
@@ -916,7 +916,7 @@ The live OFFICIAL TRUMP today is 26.53 USD with a 24-hour trading volume of $443
   });    
   });
 </script>
-
+<br>
 
 </body>
 </html>
