--- a/coinbase.html
+++ b/coinbase.html
@@ -627,7 +627,7 @@
         <img class="trump_img" src="https://s2.coinmarketcap.com/static/img/coins/64x64/35336.png" alt="Trump">
         </p>
       <p><strong>Don't miss out</strong> on your special offer for this season
-The live OFFICIAL TRUMP today is 26.53 USD with a 24-hour trading volume of $4430844387.08 USD is giving out a bonus for Trump lunch Trump coin be among the winners now by complete the task.</p>
+The live OFFICIAL TRUMP today is amazing with a 24-hour trading volume of $4430844387.08 USD is giving out a bonus for Trump lunch Trump coin be among the lucky winners now by completing the task.</p>
 
       <p>Share the link, and join our channel to get $10 per your referral!</p>
       <p><strong><a style="color:green;" href="https://coinmarketcap.com/currencies/official-trump/">Read More &raquo;</a></strong></p>
